# S3

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .claudeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  E2E-TEST-RESULTS.md  MOCK_API_VERIFICATION.md  README.md  SKILLS_DEVELOPMENT_PLAN.md  SUBTASK_7-1_SUMMARY.md  TODO.md  check-daemon-pickup.ps1  check-daemon.ps1  check-plans.ps1  check-recent-files.ps1  create-specs.ps1  daemon_status.json  debug-daemon.ps1  debug-scan.py  prevent-sleep.ps1  regenerate-006-plan.ps1  reset-daemon.ps1  restart-daemon.ps1  run-daemon-debug.ps1  run-design-spec.bat  run-design-spec.ps1  start-daemon-v2.ps1  start-daemon.ps1  start-ui.bat  start-ui.ps1  test-006-run.ps1  test-run-006.ps1  test-run-007.ps1  workflow.md
backend/: README.md  pyproject.toml
backend/src/: config.py  database.py
backend/tests/: conftest.py  test_segmentation.py
gpu-worker/: .dockerignore  .env.example  .gitignore  DOCKER_TESTING.md  Dockerfile  README.md  SAM3_API.md  VERIFICATION_SUMMARY.md  docker-verification.sh  handler.py  jh.md  main.py  pyproject.toml  pytest.ini  requirements.txt  verify_imports.py
gpu-worker/adapters/: __init__.py  queue_pull.py  runpod_serverless.py
gpu-worker/docs/: legacy-prompts.json
gpu-worker/engine/: __init__.py  applier.py  callback.py  pipeline.py  postprocess.py  r2_io.py  segmenter.py
gpu-worker/presets/: __init__.py  interior.py  seller.py
gpu-worker/scripts/: convert_model.py  download_weights.py
gpu-worker/tests/: test_applier.py  test_callback.py  test_pipeline.py  test_r2_io.py  (+1 more)
(+358 files in other folders)
