[project]
name = "s3-gpu-worker"
version = "0.1.0"
description = "S3 GPU Worker — SAM3 Segment + Rule Apply (Docker + Runpod Serverless)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["engine", "adapters", "presets"]
